--- a/Q2.html
+++ b/Q2.html
@@ -1,3 +1,7 @@
+Check if a string is a palindrome.
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +11,19 @@
 </head>
 <body>
     <script>
-        
+
+       function isPalindrome (str) {
+           for (let i = 0; i < str.length /2; i++ ) {
+            if (str[i] !== str[str.length - 1 - i]) {
+                return 'no';
+            }
+           }
+           console.log('YES')
+       }
+
+       const word = 'TENET';
+
+       isPalindrome(word);
     </script>
 </body>
 </html>
