--- a/level-1/Q10.html
+++ b/level-1/Q10.html
@@ -10,12 +10,12 @@
        
 
        let arr1 = [1,2,3,4,6];
-       let aar2 = [3,4,6,7,8,4];
+       let arr2 = [3,4,6,7,8,4];
 
        function findIntersection (arr1, arr2) {
-        arr1.filter(ele => arr2.include(ele));
+        return arr1.filter(ele => arr2.includes(ele));
 
-        return arr1;
+       ;
        }
 
        console.log(findIntersection(arr1,arr2));
