--- a/level-2/Q9.html
+++ b/level-2/Q9.html
@@ -6,6 +6,17 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script>
+        let city = 'patna';
+        const fetchData = async ( cityName = city ) => {
+            console.log(cityName)
+        }
+
+
+    </script>
+
+    <button
+    onclick= fetchData();
+    >show</button>
 </body>
 </html>
